Added initial file reading
Added basic file reading logic and added some given parameters to the
config.

--- a/appsettings.json
+++ b/appsettings.json
@@ -28,5 +28,10 @@
             "Open": "10:30",
             "Close": "23:30"
         }
+    },
+    "SetupTimes" : {
+        "StartOfDaySetup": "60",
+        "PostShowingCleanup": "35"
+
     }
 }
