Completed meta data retrieval.
Gets header values from config and gets index of each data field from
the first line of the input file.

--- a/appsettings.json
+++ b/appsettings.json
@@ -29,9 +29,14 @@
             "Close": "23:30"
         }
     },
-    "SetupTimes" : {
+    "SetupTimes": {
         "StartOfDaySetup": "60",
         "PostShowingCleanup": "35"
-
+    },
+    "InputFileHeaders": {
+        "MovieTitle": "Movie Title",
+        "ReleaseYear": "Release Year",
+        "Rating": "MPAA Rating",
+        "RunTimeMinutes": "Run Time"
     }
 }
